@@ -1,1 +1,1 @@
-DIST sundtek_installer_140601.005015.sh 22301516 SHA256 1697dc94e7dcc519b9964a36bf7f97736e9a558bacc24d54a0f0c0f63ecb584f SHA512 022b781e6cf23bcbf9fcef855c3ba46da96daf5df18dc090f2f276dd09fb65967b46d6aee3aea62112a7f08a92d73a065bd03d403224e9ea3c03d35ff1abb926 WHIRLPOOL 7fe0552cd7c5d5c4747cf91dce3d2135035a930bbede304222f9d760c62d5538e83dd9efa66894639b7f193656126817b9d69b0828e02a1dc18d9abc13506761
+DIST sundtek_installer_140629.115654.sh 23214123 SHA256 f579e47f6777494b8bcd7af461b4544ba3bb23f4c34eae8dd9dda69638b3b217 SHA512 a23ff8e7d0e562de702ec8a9af9031014b2778c3619994ad192e8e1ece91e51f7fff30658203a5c2bb007ebb3556cc88899cb50ac4128ad0cb219d315c050674 WHIRLPOOL d4bf4c79c452c64f6028a7fe06ef57a589936c35380152544df706ce4204cc3387c69876dad4cced716c9da413f9a0bdf31095b8b3a6b5374ce2ef382462b268
