@@ -1,1 +1,1 @@
-DIST zram-init-2.7.tar.gz 4837 SHA256 5b27e229e2a391be479669bfc721a56e49b947d521b2924dd2c8914585f854ed SHA512 db45d40ddf56159a42ea94f6f53bc083113d8958bad4a35273637ac6ae344faddaa1241f2f406894d473d88a66e5b2635b7a810b16bd140853d549db38c1b76f WHIRLPOOL 369092a75ee85ffc6d6b49c4e42f1094ff07fd88aa2cd4d6ea8bd3ef4abf6fee9ed357937589df5c032d91bd53cbef5079c4b5f2f0f547bb88be2355ec464f7e
+DIST zram-init-2.8.tar.gz 5115 SHA256 fe8ff015b7b68aff93060ef0b30b956f6f43257e08b4ed4c17bd729448989640 SHA512 7f9aafbbd72524f1ebdf66b1c6b030c404de52009c716023717534d5cecb2e6a6b09f3897f0fe093650594b01a07ae4d1e3d970295b73612174a0d112ea78c29 WHIRLPOOL f46209fc6c1dcfb2ef4a92445a6b1de5e5651ecefa1fba7632abadf7ed07a102956c3382b4f06b9bb0d1bfa1e5d765372f0dba2b665f8bfbd416ef4e3f95a36d
