@@ -1,1 +1,1 @@
-DIST noscript-2.6.8.28.xpi 533636 SHA256 aea2ef3a262a70e871df0de937ac8f53cd2c5d1913066200d192bb6e30924275 SHA512 3c09e9a6adc08a6738349fb2ad0705f47cf6731ee578af3562c8c67cd1b73b56e258032b2ab11c0164fc4badb5934fa6c350384d3a8139a64a9514ce61a90eca WHIRLPOOL 1722d22d72e6a9fe9815b41dd331b2bd4eb8ce90df5e907600a6490d07df1c478584cebaaecfc61603671a2eeca02f8dcd6f37c90013559efd70e572e5c9a31b
+DIST noscript-2.6.8.29.xpi 516098 SHA256 68371ac93f50dbc46063c4743f4635363cefa40271920cec9ec3631550d0a611 SHA512 50dd3255900edd9f20e216f870b65909449eb9fa0596a2a6ff13b9e735eaaad901b30e4ef56fb7c572282806cd910845add41a46a6dd6c9285da8d991247a0a3 WHIRLPOOL 1dbc2e7add4e604726e13067c943ffc9a657f6b3e3431a9f674d04a53640f47e7eab03f77082b450e37370ce7a243f76ab76ddb6acb93d5d5e267545c274a65d
