@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*zram-init-2.8.ebuild (29 Jun 2014)
+
+  29 Jun 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild.
+
 *zram-init-2.7.ebuild (17 Dec 2013)
 
   24 Jan 2014; Martin Väth <martin@mvath.de>:
