@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*noscript-2.6.8.29 (29 Jun 2014)
+
+  29 Jun 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *noscript-2.6.8.28 (03 Jun 2014)
 
   03 Jun 2014; Martin Väth <martin@mvath.de>:
