@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sundtek-tv-140629.115654 (29 Jun 2014)
+
+  29 Jun 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild.
+
 *sundtek-tv-140601.005015 (03 Jun 2014)
 
   03 Jun 2014; Martin Väth <martin@mvath.de>:
